# mogi-statechart

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yml  ros.yml
examples/: nestedChart.cpp  simple.cpp
include/mogi_statechart/: statechart.hpp  visibility_control.h
src/: chart.cpp  event.cpp  state.cpp  transition.cpp
test/: basic_test.cpp  callback_test.cpp  event_test.cpp  run_test.cpp
