<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mogi_statechart</name>
  <version>0.0.1</version>

  <description>
      A library for UML state chart
  </description>

  <maintainer email="xiao@mogi.io">Xiao Qin</maintainer>
  <license>Apache License 2.0</license>
  <author>Matt Bunting</author>
  <author>Xiao Qin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
